<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical">
        <ImageView
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/header_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ImageView>


    </LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="195dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="2dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/p_problem"
                android:layout_width="25dp"
                android:layout_height="25dp">
            </ImageView>
            <TextView
                android:textSize="15sp"
                android:padding="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/p_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:textSize="15sp"
                android:padding="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/p_problem_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="2dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/blood_qty"
                android:layout_width="25dp"
                android:layout_height="25dp">
            </ImageView>
            <TextView
                android:textSize="15sp"
                android:padding="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/blood_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:textSize="15sp"
                android:padding="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/blood_qty_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <ImageView
                android:padding="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/donation_time"
                android:layout_width="25dp"
                android:layout_height="25dp">
            </ImageView>
            <TextView
                android:textSize="15sp"
                android:padding="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/donation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:padding="2dp"
                android:textSize="15sp"
                android:text="@string/donation_time_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="2dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/blood_group"
                android:layout_width="25dp"
                android:layout_height="25dp">
            </ImageView>
            <TextView
                android:textSize="15sp"
                android:padding="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/blood_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <ImageView
                android:padding="2dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/donation_date"
                android:layout_width="25dp"
                android:layout_height="25dp">
            </ImageView>
            <TextView
                android:textSize="15sp"
                android:padding="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/blood_qty_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>


</LinearLayout>